src/_webapp/ressources/css/public.css
#progressBar {
    top: 0;
    cursor: auto;
    font-size:  17px;
}
#progressBarColor, #progressBar {
	height: 30px;
}

#karaInfo {
    padding: 0px 5px;
    line-height: 30px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.header button {
    font-size : 17px;
}
.header {
	position: fixed;
	z-index: 1337;
	background-color: #1E2124;
    top: 30px;
	height: 60px;
	width: 100%;
	border-bottom: solid 1px hsla(0, 0%, 35%, 1);
}

.pseudoChange {
    display: none;
}
.header button {
    width: 60px;
}
.header > div {
    height: 60px;
    padding: 0px;
}
.headerInputs {
    padding: 0px 7px;
    display: flex;
}
.header > div > div {
    height: 100%;
    padding: 1px 0px 1px 1px;
}
.header .dropdown {
    padding: 0px 0px 0px 0px;
}
.underHeader {
    position: relative;	
    top: calc( 60px + 30px );
    height: calc(100% - 60px - 30px );
}  
.bootstrap-switch-container i {
    font-size: 20px;
    top: 3px;
}
div.bootstrap-switch-large{
    width: 100%;
	height: 100%;
	background-color: #9e9e9e; ;
}
.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-secondary {
   height: 120%;
   line-height: 34px;
   font-size : 34px;
}

.dropdown-menu > li > a {
    font-size :   17px;
}

.playlist-main {
   height : 100%;
}
.panel {
    height : 100%;
}

.panel-heading > div,.panel-heading > div > div, .panel-heading > div > div > div, .panel-heading > div > div > div > input {
    height: 100%;
}
 .panel-heading > div > div , .panel-heading > div > div > div, .panel-heading > div > div > div > input {
     width: 100%;
 }
.list-group-item {
    font-size: 14px;
}
.playlist-main .list-group-item[user] {
	color: hsla(110, 35%, 78%, 1);
}

.header input {
    height: 100%;
    border-radius: 0px;
}

.badge {
    font-size: 12px;
}

.right-inner-addon i {
  right: 0px;
  left: auto;
}

#playlist1[canTransferKara="true"] > li {
    cursor : pointer;
}

#searchParent {
    display: flex;
}

.header input, .header .getLucky {
    __box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.20), 0 1px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.16);
}

.header .getLucky {
    max-width: 60px;
    font-size: 17px;
    line-height: 17px;
    padding: 10px;
    background-color: hsla(0, 0%, 20%, .9);
    border-width: 0px;
    border-bottom: solid 1px hsla(0, 0%, 35%, 1)
}
.header .getLucky:hover {
    background-color: hsla(0, 0%, 14%, 1);
    border-color: #444;
}

.header .getLucky:active:focus {
    background-color: hsla(0, 0%, 11%, 1);
    border-color: #222;
}

#searchParent ::-webkit-input-placeholder {
	font-size: 2rem;
	line-height:  3rem;
	height: 30px;
    text-align:right; 
    font-family: 'Glyphicons Halflings'; 
}

#searchParent  ::-moz-placeholder {  /* Firefox 19+ */
	font-size: 2rem;
	line-height:  3rem;
	height: 30px;
    text-align:right; 
	font-family: 'Glyphicons Halflings'; 
}

#searchParent :-ms-input-placeholder {
	font-size: 2rem;
	line-height:  3rem;
	height: 30px;
    text-align:right; 
	font-family: 'Glyphicons Halflings'; 
}


.popup .panel-heading {
    display: flex;
}

/* tablet */

.panel {
    border: 3px solid #1E2124;
}
.playlist-main {
    padding: 4px 0px;
}

/* experimental, à vérifier */


.playlist-main, .panel, .playlistContainer, .list-group, .list-group > li.list-group-item, .list-group .contentDiv {
    border-radius: 0;
    touch-action: pan-y !important;
}

.drag  {
    overflow: hidden;
}   
.dragged .contentDiv {
    white-space: nowrap;
}
.list-group-item.pressed {
background-color: rgba(18, 35, 53, 0.70);
background-color: rgba(18, 43, 31, 0.60);
}
.list-group-item.active,
.list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover {
background-color: hsla(210, 6%, 15%, 0.83);
border-color: rgba(177, 177, 177, 0.65);
}
.list-group-item > .contentDiv {
    overflow: hidden;
}
.list-group-item {
    overflow: hidden;
}

#mobileHelp, #mobileActions {
    display: none;
}

.header > div > div.switchParent {
    padding: 0;
    display: flex;
}

.plSearch {
    flex-grow: 1000;
}

/* mobile */

@media (max-width: 1025px) {
    
    .panel {
        border: 0px solid #1E2124;
        position: absolute;
        transform: translateX(0%);
    }

    #panel2 {
        left: 100%;
    }

    #message {
        width: 300px;
        top: 3px;
        left: calc(50% - 150px);
    }
    .fullLyrics {
        width: 46px;
        height: 46px;
        font-size: 18px;
    }
    .playlist-main {
        padding: 0px;
    }
    .deleteCriteria {
        display: none !important;
    }
    .list-group-item:first-child {
        border-top-width: 0px;
    }

    .playlist-main {
        width: 100%;
    }
    .headerInputs, .header > div > div {
        padding: 0px;
    }
    
        
    #searchParent ::-webkit-input-placeholder {
        font-size: 2rem;
        line-height:  3rem;
        height: 60px;
    }

    #searchParent  ::-moz-placeholder {  /* Firefox 19+ */
        font-size: 3rem;
        line-height:  6rem;
        height: 60px;
    }

    #searchParent :-ms-input-placeholder {
        font-size: 2rem;
        line-height:  3rem;
        height: 60px;
    }

    .fixed-action-btn.left {
        bottom: 17px;
        left: 17px;
        right: auto;
        position: fixed;
        padding-top: 15px;
        z-index: 9876;
    }
    
    .btn-floating.btn-large {
        font-size: 23px;
        width: 60px;
        height: 60px;
        border-radius: 50%;
        transition: .3s;
        cursor: pointer;
        vertical-align: middle;
        display: inline-block;
        color: #fff;
        position: relative;
        overflow: hidden;
        z-index: 1;
        line-height: 40px;
        padding: 0;
        background-color: #546e7a;
        text-align: center;
    }
    .btn-large > i {
        line-height: 60px;
        font-weight: 30px;
        text-align: center;
        __left: 31%;
    }
    .fixed-action-btn ul {
        left: 0;
        right: 0;
        text-align: center;
        position: absolute;
        bottom: 64px;
        margin: 0;
        opacity: 0;
        transition: all .5s ease;
    }

    .fixed-action-btn ul li {
        margin-bottom: 7px;
        list-style-type: none;
    }
    .fixed-action-btn ul {
        padding-left: 0px;
    }
    .fixed-action-btn ul li a {
        transform: scaleY(0.9) scaleX(0.9) translateY(0px) translateX(0px);
    }
    .z-depth-3 {
        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
    }

    #progressBar {
        box-shadow: none;
    }

    #switchInfoBar.showLyrics > i.infos {
        display: none;
    }
    #switchInfoBar:not(.showLyrics) > i.lyrics {
        display: none;
    }
    
   #mobileHelp, #mobileActions {
       display: block;
   }

  
   .list-group-item > div.detailsKara {
    min-height: 56px;
    padding: 10px;
    margin: 7px;
    color: #DFE9EF;
    background-color: #30393e;
    border-color: #8aa9af;
    border-radius: 0px;
    position: relative;
    border-color: hsla(190, 13%, 43%, 1);
    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);

    }

}

/* special size for iPad pro */
@media (max-width: 1025px) and (min-width: 992px) {
    .hidden-msm {
        display: none!important;
    }
    .col-msm-12 {
        width: 100% !important;
    }
}

